# DASObjectStore

./: .gitignore  .readthedocs.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  ROADMAP.md  TODO.md  package-lock.json  package.json  product-manifest.json
crates/dasobjectstore-cli/: Cargo.toml
crates/dasobjectstore-cli/src/: auth_migrate_main.rs  cli.rs  local_auth_helper_main.rs  main.rs  run.rs  server_cli.rs  server_main.rs  server_run.rs
crates/dasobjectstore-cli/src/cli/: application_auth.rs  disk.rs  ingest.rs  object.rs  performance.rs  pool.rs  service.rs  store.rs  subobject.rs
crates/dasobjectstore-cli/src/run/: application_auth.rs  command_handlers.rs  connection_status.rs  disk_lockdown.rs  disk_prepare.rs  health.rs  ingest_client.rs  ingest_local_direct.rs  ingest_queue.rs  ingest_source_access.rs  managed_roots.rs  metadata_paths.rs  output.rs  performance_direct_hdd.rs  performance_execution.rs  performance_io.rs  performance_plan.rs  performance_rates.rs  performance_report.rs  performance_residency.rs  performance_run.rs  performance_scenarios.rs  performance_scheduler.rs  performance_settle.rs  performance_ssd_only.rs  performance_ssd_pipeline.rs  performance_ssd_stage_then_drain.rs  performance_tui.rs  performance_workload.rs  probe.rs  registry_access.rs  runtime_status.rs  service.rs  storage_lifecycle.rs  store_read.rs  store_write.rs  subobject.rs
crates/dasobjectstore-cli/tests/: auth_authority_switch_mvp_acceptance.rs  performance_recommendation_artifact_contract.rs
crates/dasobjectstore-daemon/: Cargo.toml
crates/dasobjectstore-daemon/src/: application_token_verifier.rs  development_self_signing.rs  lib.rs  main.rs
crates/dasobjectstore-daemon/src/api/: appliance_telemetry.rs  application_delete.rs  application_identity.rs  application_mtls.rs  application_token.rs  application_upload.rs  capacity.rs  disk_lockdown.rs  disk_mutation.rs  enclosure.rs  endpoint.rs  health.rs  ingest.rs  ingest_mutation.rs  jobs.rs  live_status.rs  local_admin.rs  mod.rs  object_browser.rs  object_mutation.rs  object_store.rs  profile_binding.rs  profile_browser.rs  profile_capabilities.rs  profile_catalogue.rs  profile_diagnostics.rs  profile_inspection.rs  profile_migration.rs  profile_readiness.rs  profile_s3.rs  provider_stream.rs  remote_easyconnect.rs  request_validation.rs  service.rs  storage_mutation.rs  store_deduplicate.rs  stores.rs  (+3 more)
crates/dasobjectstore-daemon/tests/: appliance_telemetry.rs  application_auth_mvp_acceptance.rs  folder_profile_fixture_matrix.rs  non_root_ingest_boundary.rs  package_assets.rs  remote_upload_completion_mvp_acceptance.rs
crates/dasobjectstore-gui-api/: Cargo.toml
crates/dasobjectstore-gui-api/src/: actions.rs  activity_aggregator.rs  auth.rs  auth_admin_clients.rs  auth_clients.rs  auth_contracts.rs  auth_guard.rs  auth_identity_routes.rs  auth_parsing.rs  auth_reporting.rs  auth_router.rs  auth_routes.rs  auth_validation.rs  daemon_bridge.rs  dashboard.rs  enclosures_aggregator.rs  endpoints.rs  endpoints_aggregator.rs  endpoints_registry.rs  groups_registry.rs  home_aggregator.rs  host_auth.rs  lib.rs  live_status.rs  mtls_listener.rs  object_browser_routes.rs  object_stores_aggregator.rs  profile_catalogue.rs  profile_delete.rs  profile_download.rs  profile_multipart.rs  profile_upload.rs  remote_upload_aggregator.rs  reporting.rs  routes.rs  s3_gateway.rs  s3_gateway_auth.rs  server_config.rs  tls_assets.rs  view.rs  (+2 more)
crates/dasobjectstore-gui-web/: Cargo.toml  Trunk.toml  index.html  styles.css
crates/dasobjectstore-gui-web/src/: activity.rs  api.rs  api_admin_contracts.rs  api_contracts.rs  app.rs  disks.rs  encoding.rs  endpoints.rs  entrypoint.rs  lib.rs  main.rs  mount.rs  objects.rs  overview.rs  session.rs  storage.rs  stores.rs  users_groups.rs  users_groups_contracts.rs  workspace.rs
crates/dasobjectstore-gui-web/styles/: activity.css  auth.css  enclosures.css  endpoints.css  home.css  live-status.css  local-access.css  object-browser.css  object-stores.css  remote-upload.css  reporting.css
crates/dasobjectstore-metadata/: Cargo.toml
crates/dasobjectstore-metadata/src/: attach.rs  capacity.rs  contents.rs  copy.rs  destage.rs  direct_import.rs  disk.rs  drain.rs  evacuation.rs  export.rs  format.rs  hash.rs  ingest.rs  initialize.rs  inspect.rs  integrity.rs  lib.rs  local_object_store.rs  manifest.rs  markers.rs  object.rs  object_commit.rs  placement_log.rs  profile_catalogue_commit.rs  queue.rs  recovery.rs  repair_activity.rs  schema.rs  secure_fs.rs  snapshot.rs  store.rs
crates/dasobjectstore-mnemosyne/: Cargo.toml
crates/dasobjectstore-mnemosyne/src/: binding.rs  boundary.rs  flounder_telemetry.rs  host_auth_adapter.rs  host_auth_router.rs  host_boundary.rs  host_mode.rs  integrated_session.rs  lib.rs  monas_host_boundary.rs  nas_nfs_endpoint.rs  nas_nfs_runtime.rs  policy_templates.rs  product_provisioning.rs  product_ui.rs  prosopikon.rs  storage_definition.rs  validation.rs
crates/dasobjectstore-mnemosyne/tests/: host_auth_adapter_contract.rs  host_mode_contract.rs  mnemosyne_contract_change_plan_contract.rs  monas_host_boundary_contract.rs  product_manifest_contract.rs  product_profile_mvp_acceptance.rs  product_ui_bootstrap_contract.rs  synoptikon_catalogue_draft_contract.rs  synoptikon_host_boundary_contract.rs  synoptikon_integrated_session_contract.rs
crates/dasobjectstore-object-service/: Cargo.toml
crates/dasobjectstore-object-service/src/: compose.rs  credentials.rs  garage.rs  inspection.rs  layout.rs  lib.rs  provider.rs  provisioning.rs  registry.rs  remote_upload.rs  subobject.rs
crates/dasobjectstore-object-service/tests/: generated_compose_config.rs
crates/dasobjectstore-platform/: Cargo.toml
crates/dasobjectstore-platform/src/: drive.rs  enclosure.rs  health.rs  lib.rs  linux.rs  linux_smart.rs  macos.rs  macos_health.rs  model.rs  probe.rs
crates/dasobjectstore-remote/: Cargo.toml
crates/dasobjectstore-remote/src/: auth.rs  authenticate.rs  cli.rs  config.rs  easyconnect.rs  lib.rs  main.rs  run.rs  s3.rs
(+345 files in other folders)
