[workspace]
members = [
    "crates/dasobjectstore-cli",
    "crates/dasobjectstore-core",
    "crates/dasobjectstore-daemon",
    "crates/dasobjectstore-gui-api",
    "crates/dasobjectstore-gui-web",
    "crates/dasobjectstore-metadata",
    "crates/dasobjectstore-mnemosyne",
    "crates/dasobjectstore-object-service",
    "crates/dasobjectstore-platform",
    "crates/dasobjectstore-tui",
]
resolver = "2"

[workspace.package]
version = "0.1.5"
edition = "2021"
license = "MPL-2.0"
repository = "https://github.com/sagrudd/DASObjectStore"

[workspace.dependencies]
argon2 = "0.5.3"
axum = "0.8.9"
clap = { version = "4.5.48", features = ["derive"] }
crossterm = "0.29.0"
dasobjectstore-core = { path = "crates/dasobjectstore-core" }
dasobjectstore-daemon = { path = "crates/dasobjectstore-daemon" }
dasobjectstore-gui-api = { path = "crates/dasobjectstore-gui-api" }
dasobjectstore-gui-web = { path = "crates/dasobjectstore-gui-web" }
dasobjectstore-metadata = { path = "crates/dasobjectstore-metadata" }
dasobjectstore-mnemosyne = { path = "crates/dasobjectstore-mnemosyne" }
dasobjectstore-object-service = { path = "crates/dasobjectstore-object-service" }
dasobjectstore-platform = { path = "crates/dasobjectstore-platform" }
dasobjectstore-tui = { path = "crates/dasobjectstore-tui" }
plist = "1"
rcgen = "0.14.8"
rand_core = { version = "0.6.4", features = ["getrandom"] }
ratatui = "0.30.2"
libc = "0.2"
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
tokio = { version = "1.48.0", features = ["macros", "rt"] }
tower = { version = "0.5.2", features = ["util"] }
uuid = { version = "1.19.0", features = ["v4", "serde"] }
yew = { version = "0.23.0", features = ["csr"] }
