[workspace]
members = [
    "crates/dasobjectstore-cli",
    "crates/dasobjectstore-core",
    "crates/dasobjectstore-daemon",
    "crates/dasobjectstore-gui-api",
    "crates/dasobjectstore-gui-web",
    "crates/dasobjectstore-metadata",
    "crates/dasobjectstore-mnemosyne",
    "crates/dasobjectstore-object-service",
    "crates/dasobjectstore-platform",
    "crates/dasobjectstore-remote",
    "crates/dasobjectstore-tui",
]
resolver = "2"

[workspace.package]
version = "0.76.25"
edition = "2021"
license = "MPL-2.0"
repository = "https://github.com/sagrudd/DASObjectStore"

[workspace.dependencies]
argon2 = "0.5.3"
axum = "0.8.9"
axum-server = { version = "0.7.2", features = ["tls-rustls"] }
bytes = "1.11.0"
clap = { version = "4.5.48", features = ["derive"] }
crossterm = "0.29.0"
dasobjectstore-core = { path = "crates/dasobjectstore-core" }
dasobjectstore-daemon = { path = "crates/dasobjectstore-daemon" }
dasobjectstore-gui-api = { path = "crates/dasobjectstore-gui-api" }
dasobjectstore-gui-web = { path = "crates/dasobjectstore-gui-web" }
dasobjectstore-metadata = { path = "crates/dasobjectstore-metadata" }
dasobjectstore-mnemosyne = { path = "crates/dasobjectstore-mnemosyne" }
dasobjectstore-object-service = { path = "crates/dasobjectstore-object-service" }
dasobjectstore-platform = { path = "crates/dasobjectstore-platform" }
dasobjectstore-remote = { path = "crates/dasobjectstore-remote" }
dasobjectstore-tui = { path = "crates/dasobjectstore-tui" }
gloo-net = "0.5.0"
gloo-timers = "0.3.0"
flate2 = "1.1.5"
js-sys = "0.3.83"
plist = "1"
prosopikon-core = { path = "../prosopikon/crates/prosopikon-core" }
prosopikon-yew = { path = "../prosopikon/crates/prosopikon-yew" }
rcgen = "0.14.8"
rand_core = { version = "0.6.4", features = ["getrandom"] }
ratatui = "0.30.2"
regex = "1.12.2"
libc = "0.2"
reqwest = { version = "0.12.24", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rpassword = "7.4.0"
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
tar = "0.4.44"
tokio = { version = "1.48.0", features = ["fs", "io-util", "macros", "net", "rt", "rt-multi-thread", "sync", "time"] }
tokio-stream = "0.1.17"
tokio-util = { version = "0.7.17", features = ["io"] }
tower = { version = "0.5.2", features = ["util"] }
uuid = { version = "1.19.0", features = ["v4", "serde"] }
wasm-bindgen = "0.2.106"
wasm-bindgen-futures = "0.4.76"
web-sys = "0.3.82"
yew = { version = "0.23.0", features = ["csr"] }
