[package]
name = "dasobjectstore-cli"
version = "0.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "dasobjectstore"
path = "src/main.rs"

[[bin]]
name = "dasobjectstore-server"
path = "src/server_main.rs"

[dependencies]
clap.workspace = true
dasobjectstore-core.workspace = true
dasobjectstore-gui-api.workspace = true
dasobjectstore-metadata.workspace = true
dasobjectstore-mnemosyne.workspace = true
dasobjectstore-object-service.workspace = true
dasobjectstore-platform.workspace = true
serde_json.workspace = true

[features]
debug-commands = []

[dev-dependencies]
rusqlite.workspace = true
