[package]
name = "dasobjectstore-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "dasobjectstore"
path = "src/main.rs"

[[bin]]
name = "dasobjectstore-server"
path = "src/server_main.rs"

[[bin]]
name = "dasobjectstore-local-auth-helper"
path = "src/local_auth_helper_main.rs"

[dependencies]
axum.workspace = true
axum-server.workspace = true
clap.workspace = true
dasobjectstore-core.workspace = true
dasobjectstore-daemon.workspace = true
dasobjectstore-gui-api.workspace = true
dasobjectstore-metadata.workspace = true
dasobjectstore-mnemosyne.workspace = true
dasobjectstore-object-service.workspace = true
dasobjectstore-platform.workspace = true
dasobjectstore-tui.workspace = true
libc.workspace = true
ratatui.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tokio.workspace = true

[features]
debug-commands = []

[dev-dependencies]
rusqlite.workspace = true
tower.workspace = true
