[package]
name = "dasobjectstore-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
path = "src/lib.rs"

[features]
default = []
development-self-signing = ["dep:rcgen"]

[[bin]]
name = "dasobjectstored"
path = "src/main.rs"

[dependencies]
base64.workspace = true
dasobjectstore-core.workspace = true
dasobjectstore-metadata.workspace = true
dasobjectstore-object-service.workspace = true
libc.workspace = true
serde.workspace = true
serde_json.workspace = true
rusqlite.workspace = true
ring.workspace = true
sha2.workspace = true
rcgen = { workspace = true, optional = true }

[dev-dependencies]
serde_json.workspace = true
