[package]
name = "dasobjectstore-gui-api"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
argon2.workspace = true
axum.workspace = true
dasobjectstore-core.workspace = true
dasobjectstore-daemon.workspace = true
rand_core.workspace = true
rcgen.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
uuid.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
pam-client.workspace = true

[dev-dependencies]
tokio.workspace = true
tower.workspace = true
