[package]
name = "dasobjectstore-gui-api"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
axum.workspace = true
bytes.workspace = true
dasobjectstore-core.workspace = true
dasobjectstore-daemon.workspace = true
dasobjectstore-metadata.workspace = true
dasobjectstore-object-service.workspace = true
flate2.workspace = true
libc.workspace = true
prosopikon-core = { workspace = true, features = ["auth", "pam"] }
rcgen.workspace = true
rustls.workspace = true
rustls-pemfile.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tar.workspace = true
tokio.workspace = true
tokio-rustls.workspace = true
tokio-stream.workspace = true
tokio-util.workspace = true
uuid.workspace = true

[dev-dependencies]
rusqlite.workspace = true
tower.workspace = true
