[package]
name = "dasobjectstore-gui-web"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
serde.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
yew.workspace = true

[dev-dependencies]
serde_json.workspace = true
