[package]
name = "dasobjectstore-gui-web"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
serde.workspace = true
serde_json.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
gloo-net.workspace = true
gloo-timers.workspace = true
wasm-bindgen-futures.workspace = true
web-sys = { workspace = true, features = ["HtmlInputElement", "HtmlSelectElement", "Storage", "Window"] }
yew.workspace = true

[dev-dependencies]
serde_json.workspace = true
