[package]
name = "dasobjectstore-gui-web"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
prosopikon-core.workspace = true
serde.workspace = true
serde_json.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
gloo-net.workspace = true
gloo-timers.workspace = true
js-sys.workspace = true
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
web-sys = { workspace = true, features = ["Blob", "BlobPropertyBag", "DataTransfer", "Document", "DragEvent", "Element", "EventTarget", "File", "FileList", "HtmlAnchorElement", "HtmlElement", "HtmlInputElement", "HtmlSelectElement", "Node", "Storage", "Url", "Window"] }
prosopikon-yew.workspace = true
yew.workspace = true

[dev-dependencies]
serde_json.workspace = true
sha2.workspace = true
