[package]
name = "dasobjectstore-metadata"
version = "0.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
dasobjectstore-core.workspace = true
rusqlite.workspace = true
serde.workspace = true

[dev-dependencies]
serde_json.workspace = true
