[package]
name = "dasobjectstore-mnemosyne"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
dasobjectstore-core.workspace = true
dasobjectstore-daemon.workspace = true
dasobjectstore-object-service.workspace = true
prosopikon-core.workspace = true
serde.workspace = true

[dev-dependencies]
serde_json.workspace = true
