[package]
name = "dasobjectstore-mnemosyne"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
dasobjectstore-core.workspace = true
dasobjectstore-daemon.workspace = true
dasobjectstore-gui-api.workspace = true
dasobjectstore-object-service.workspace = true
prosopikon-core.workspace = true
serde.workspace = true
sha2.workspace = true

[dev-dependencies]
axum.workspace = true
serde_json.workspace = true
tokio.workspace = true
tower.workspace = true
