[package]
name = "dasobjectstore-object-service"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
dasobjectstore-core.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
