[package]
name = "dasobjectstore-remote"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "dasobjectstore-remote"
path = "src/main.rs"

[dependencies]
clap.workspace = true
dasobjectstore-core.workspace = true
dasobjectstore-daemon.workspace = true
rpassword.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
